--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 1998
 MONGOURL = mongodb+srv://foodly:XZsLlycW2PBlTY4P@foodly.d0k9llf.mongodb.net/foodly
+SECRET = foddlyFlutter
+JWTSECRET = foodly
+EMAIL = abirhasanutsho0@gmail.com
+PASSWORD = wtgv zbqm frgt qoks
